bk_ida/gccida/c0/fold_range_test
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4338:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v1; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4341:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v4; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4342:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // [rsp+28h] [rbp-C8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4343:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // [rsp+40h] [rbp-B0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4344:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // [rsp+50h] [rbp-A0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4345:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // [rsp+58h] [rbp-98h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4347:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *common; // [rsp+80h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4348:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tem; // [rsp+88h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4349:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rhs; // [rsp+90h] [rbp-60h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4350:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *lhs; // [rsp+98h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4385:31: error: expected expression
v9 = rhs ? rhs : ( tree_node *)*( &global_trees + 11); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/fold-const.c:4385:20: error: use of undeclared identifier 'tree_node'
v9 = rhs ? rhs : ( tree_node *)*( &global_trees + 11); 
                   ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_range_test/src/obj/fold-const.o] Error 1
